--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"No test yet\" && exit 0"
+    "test": "node test.js"
   },
   "keywords": [],
   "author": "",
