--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,49 +1,34 @@
-# .github/workflows/ci.yml
-name: CI
+name: CI Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    services:
-      # start a container for the app so tests can hit it
-      app:
-        image: node:18
-        ports:
-          - 3000:3000
-        options: >-
-          --health-cmd="curl -f http://localhost:3000/health || exit 1"
-          --health-interval=5s
-          --health-timeout=2s
-          --health-retries=20
-        env:
-          NODE_ENV: development
+
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      - name: Build Docker image locally (for sanity)
-        run: docker build -t devops-practice:ci .
+    - name: Start server in background
+      run: |
+        node app.js &
+        sleep 5
 
-      - name: Start app in background (npm start)
-        run: |
-          nohup npm start > app.log 2>&1 &
-          # wait for health
-          for i in {1..20}; do
-            curl -sS http://localhost:3000/health && break || sleep 1
-          done
+    - name: Run tests
+      run: npm test
 
-      - name: Run tests
-        run: npm test
+    - name: Build Docker image
+      run: docker build -t latihandevops .
